# etx-tracer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  features.md
.gemini/: config.yaml  styleguide.md
.github/: FUNDING.yml
blender/: etx_export_plugin.py
blender/etx_tracer_exporter/: __init__.py  logic.py  operator.py
cmake/: FindEmbree.cmake  FindOptiX.cmake
docs/: BUILDING.md  CODESTYLE.md
scripts/: format-all.bat  format-all.sh  format-file.bat  format-file.sh
sources/: CMakeLists.txt
sources/cuda_compiler/: CMakeLists.txt  cuda_compiler.cxx  cuda_compiler_lib.cxx  cuda_compiler_lib.hxx
sources/etx/: CMakeLists.txt
sources/etx/app/: app.cxx  app.hxx
sources/etx/core/: core.cxx  core.hxx  debug.hxx  environment.cxx  environment.hxx  handle.hxx  json.hxx  log.cxx  log.hxx  macos.cxx  options.cxx  options.hxx  pimpl.hxx  platform.cxx  platform.hxx  profiler.cxx  profiler.hxx  windows.cxx  windows.hxx
sources/etx/gpu/: gpu.cxx  gpu.hxx  optix.cxx  optix.hxx
sources/etx/gpu-off/: gpu-off.cxx
sources/etx/log/: log.cxx  log.hxx
sources/etx/render/host/: denoiser.cxx  denoiser.hxx  distribution_builder.hxx  film.cxx  film.hxx  gltf_accessor.hxx  image_loaders.cxx  image_loaders.hxx  image_pool.cxx  image_pool.hxx  medium_pool.cxx  medium_pool.hxx  pool.hxx  rnd_sampler.hxx  scattering.cxx  scene_data.hxx  scene_loader.cxx  scene_loader.hxx  scene_representation.cxx  scene_representation.hxx  scene_saver.cxx  scene_saver.hxx  scene_serialization.cxx  scene_serialization.hxx  spectrum.cxx  tasks.cxx  tasks.hxx
sources/etx/render/shared/: base.hxx  bsdf.hxx  bsdf_coating.hxx  bsdf_conductor.hxx  bsdf_dielectric.hxx  bsdf_external.hxx  bsdf_generic.hxx  bsdf_plastic.hxx  bsdf_principled.hxx  bsdf_subsurface.hxx  bsdf_various.hxx  bsdf_velvet.hxx  bssrdf_subsurface.hxx  camera.hxx  distribution.hxx  emitter.hxx  image.hxx  ior_database.hxx  material.hxx  math.hxx  medium.hxx  sampler.hxx  scattering.hxx  scene.hxx  scene_bsdf.hxx  scene_bssrdf_subsurface.hxx  scene_camera.hxx  scene_emitters.hxx  scene_medium.hxx  spectrum.hxx  vcm.hxx  vector_math.hxx  vertex_utils.hxx
sources/etx/rt/: mnee.cxx  mnee.hxx  rt.cxx  rt.hxx
sources/etx/rt/integrators/: atmosphere.cxx  atmosphere.hxx  bidirectional.cxx  bidirectional.hxx  bidirectional_shared.hxx  debug.cxx  debug.hxx  direct.cxx  direct.hxx  integrator.cxx  integrator.hxx  path_tracing.cxx  path_tracing.hxx  path_tracing_2.cxx  path_tracing_2.hxx  path_tracing_gpu.cxx  path_tracing_gpu.hxx  path_wavefront_pt.cxx  path_wavefront_pt.hxx  vcm.cxx  vcm.hxx  vcm_cpu.cxx  vcm_cpu.hxx  vcm_gpu.cxx  vcm_gpu.hxx  vcm_shared.cxx  vcm_spatial_grid.hxx
sources/etx/rt/shared/: optix.hxx  path_tracing_shared.hxx  vcm_shared.cxx  vcm_shared.hxx
sources/etx/util/: options.cxx  options.hxx
sources/raytracer/: CMakeLists.txt  app.cxx  app.hxx  camera_controller.hxx  denoiser.cxx  denoiser.hxx  main.cxx  options.hxx  render.cxx  render.hxx  ui.cxx  ui.hxx
